; ModuleID = '/home/carl/AnghaBench/RetroArch/ps2/libcdvd/ee/extr_cdvd_rpc.c_CDVD_GetSize.c'
source_filename = "/home/carl/AnghaBench/RetroArch/ps2/libcdvd/ee/extr_cdvd_rpc.c_CDVD_GetSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cdvd_inited = common dso_local global i32 0, align 4
@cd0 = common dso_local global i32 0, align 4
@CDVD_GETSIZE = common dso_local global i32 0, align 4
@sbuff = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CDVD_GetSize() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @cdvd_inited, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %17

5:                                                ; preds = %0
  %6 = load i32, i32* @CDVD_GETSIZE, align 4
  %7 = load i32*, i32** @sbuff, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 0
  %9 = bitcast i32* %8 to i8*
  %10 = load i32*, i32** @sbuff, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  %12 = bitcast i32* %11 to i8*
  %13 = call i32 @SifCallRpc(i32* @cd0, i32 %6, i32 0, i8* %9, i32 0, i8* %12, i32 4, i32 0, i32 0)
  %14 = load i32*, i32** @sbuff, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 0
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %5, %4
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local i32 @SifCallRpc(i32*, i32, i32, i8*, i32, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
